acceptance/tests/fixtures/cases/custom-api-gateway/kitchen-sink/gateway-policy.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1alpha1
kind: CustomGatewayPolicy
metadata:
  name: custom-my-policy
spec:
  targetRef:
    name: custom-gateway
    sectionName: custom-http-auth
    group: consul.hashicorp.com/v1beta1
    kind: Gateway
  override:
    jwt:
      providers:
      - name: "local"
  default:
    jwt:
      providers:
      - name: "local"
        verifyClaims:
        - path:
            - role
          value: pet
