acceptance/tests/fixtures/cases/custom-api-gateway/kitchen-sink/gatewayclassconfig.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1alpha1
kind: GatewayClassConfig
metadata:
  name: custom-gateway-class-config
spec:
  deployment:
    defaultInstances: 2
    maxInstances: 3
    minInstances: 1
